--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,46 @@
   "name": "The Nexus",
   "short_name": "Nexus",
   "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#1a0033",
-  "theme_color": "#7216a6",
+  "background_color": "#000000",
+  "theme_color": "#1E90FF",
+  "description": "TitanOS: A high-performance OS simulation for strategic missions and city rebuilding.",
   "icons": [
+    {
+      "src": "/assets/images/icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "/assets/images/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/assets/images/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/assets/images/icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "apple-mobile-web-app-capable": "yes",
+  "apple-mobile-web-app-status-bar-style": "black-translucent",
+  "apple-mobile-web-app-title": "Nexus",
+  "orientation": "portrait",
+  "prefer_related_applications": false
 }
