--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,8 +3,10 @@ workflows:
     name: iOS Capacitor Build
     environment:
       xcode: latest
-      node: 18
-      npm: true
+      node: "20.5.0"            # Node version as string
+      npm:
+        version: "10.2.0"       # Latest npm version as string
+        # authToken: ${{secrets.NPM_TOKEN}}  # Uncomment if you need npm auth
     scripts:
       - name: Install dependencies
         script: |
