--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",                   // run development server
-    "build": "vite build",            // build production files
-    "preview": "vite preview",        // preview the production build
-    "cap-sync": "npx cap sync ios"    // optional helper script for Capacitor
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "cap-sync": "npx cap sync ios"
   },
   "dependencies": {
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.0.0",
-    "vue": "^3.3.0"                   // replace with react/angular if needed
+    "vue": "^3.3.0"
   },
   "devDependencies": {
     "vite": "^4.4.0"
