--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "cap-sync": "npx cap sync ios"
   },
   "dependencies": {
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.0.0",
-    "vue": "^3.3.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
-  "devDependencies": {
-    "vite": "^4.4.0"
-  }
+  "devDependencies": {}
 }
