--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "name": "nexus-pwa",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cap-sync": "npx cap sync ios"
-  },
-  "dependencies": {
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/ios": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
+  "scripts": {},
+  "dependencies": {},
   "devDependencies": {}
 }
